--- a/post.html
+++ b/post.html
@@ -55,7 +55,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/jordyreal1.jpg')">
+    <header class="masthead" style="background-image: url('img/matthew.jpg')">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
@@ -129,9 +129,9 @@ Atlanta is one of the best offenses in the league and Detroit will be forced to 
             <p>The saints were already a heavy pass first team and AP is in a running back committee for most likely the rest of the season. He offers no receiving production and has ran poorly in his first 2 games as a Saint. Keep him on your bench in week 3 vs Carolina.</p>
 
             <a href="#">
-              <img class="img-fluid" src="img/jordyNelson.jpg" alt="">
+              <img class="img-fluid" src="img/Alshon.jpg" alt="">
             </a>
-            <span class="caption text-muted">To go places and do things that have never been done before – that’s what living is all about.</span>
+            <span class="caption text-muted">Alshon Jeffery is a risky start for Week 3.</span>
             
             <h6>Alshon Jeffery</h6>
             <p>If healthy, Janoris “Jackrabbit” Jenkins will shadow Jeffrey in the matchup between the Eagles and Giants. Jenkins did a phenomenal job on Dez Bryant in week 1 making Jeffrey a mere desperation flex play if Jenkins is good to go.</p>
