--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="post.html">Sample Post</a>
+              <a class="nav-link" href="post.html">Rankings</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
@@ -59,7 +59,7 @@
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
               <h1>Fantasy Talk</h1>
-              <span class="subheading">Your Tools to Win Fantaasy</span>
+              <span class="subheading">Your Tools to Win Fantasy</span>
             </div>
           </div>
         </div>
