--- a/post.html
+++ b/post.html
@@ -163,7 +163,7 @@ Atlanta is one of the best offenses in the league and Detroit will be forced to 
             <h4>Houston Texans</h4>
             
             <p>They’re playing Tom Brady, so yea ...</p>
-            <p>Leave a comment in the contact section for any thoughts, questions or concerned</p>
+            <p>Leave a comment in the contact section for any thoughts, questions or concerns</p>
           </div>
         </div>
       </div>
