--- a/post.html
+++ b/post.html
@@ -130,7 +130,7 @@ Atlanta is one of the best offenses in the league and Detroit will be forced to 
             <p>The Saints were already a heavy pass first team and AP is in a running back committee for most likely the rest of the season. He offers no receiving production and has ran poorly in his first 2 games as a Saint. Keep him on your bench in week 3 vs Carolina.</p>
 
             <a href="#">
-              <img class="img-fluid" src="img/jenkins.jpg" alt="">
+              <img class="img-fluid" src="img/Alshon.jpg" alt="">
             </a>
             <span class="caption text-muted">Alshon Jeffery is a risky start against All-Pro Janoris Jenkins for Week 3.</span>
             
